Fixed fonts again

--- a/stats.html
+++ b/stats.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="./images/logo.png" type="png" class="favicon">
     <link rel="stylesheet" href="./src/css/heroes.css">
     <link rel="stylesheet" href="./src/css/style.css">
+    <link rel="stylesheet" href="./src/css/font.css">
     <script src="https://unpkg.com/skinview3d@3.0.0-alpha.1/bundles/skinview3d.bundle.js"></script>
 </head>
 <body>
