Server stats, text shadows

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
         <div class="navbar">
             <img src="./images/logo.png" alt="HGLabor" />
             <a href="/">Home</a>
-            <a href="/stats/server">Server</a>            
+            <a href="server.html">Server</a>            
         </div>
         <div class="nav-right">
             <a href="https://github.com/Kalbskinder/hglabor-website" target="_blank"><img src="./images/github.png" alt="Github" class="colorfilter"></a>
         </div>
     </nav>
     <div class="head-element">
-        <h1>Leaderboard</h1>
+        <h1 class="white shadow">Leaderboard</h1>
         <div class="search-elements">
             <input type="text" placeholder="Search by uuid" id="input"/>
             <button onclick="redirectStats()">Search</button>
