--- a/stats.html
+++ b/stats.html
@@ -11,9 +11,9 @@
     <script src="https://unpkg.com/skinview3d@3.0.0-alpha.1/bundles/skinview3d.bundle.js"></script>
 </head>
 <body>
-    <a href="index.html"><div class="nav"><img src="./images/arrow.png" alt="Return">Return</div></a>
+    <a href="index.html"><div class="nav white shadow"><img src="./images/arrow.png" alt="Return">Return</div></a>
     <div class="container">
-        <h1>Stats Viewer</h1>
+        <h1 class="white shadow">Stats Viewer</h1>
         <div class="canvas-container">
             <canvas id="skin-container"></canvas>
         </div>
